ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail204.hs

{-# OPTIONS_GHC -Wall #-}
{-# OPTIONS_GHC -Werror #-}

-- Trac #3261

module Foo where

foo :: Int
foo = ceiling 6.3

