ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail204.stderr

tcfail204.hs:10:7: error: [-Wtype-defaults (in -Wall), -Werror=type-defaults]
    • Defaulting the following constraints to type ‘Double’
        (RealFrac a0)
          arising from a use of ‘ceiling’ at tcfail204.hs:10:7-17
        (Fractional a0)
          arising from the literal ‘6.3’ at tcfail204.hs:10:15-17
    • In the expression: ceiling 6.3
      In an equation for ‘foo’: foo = ceiling 6.3
